Fixing checkstyle